# cmake_4_android

./: CMakeLists.txt  README  main.c
