cmake_minimum_required(VERSION 2.8)
PROJECT (HELLO)
#set(CMAKE_C_FLAGS "-pie -fPIE")
#set(CMAKE_LD_FLAGS "-pie -fPIE")
set(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE")
SET(SRC_LIST ${HELLO_SOURCE_DIR}/main.c)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
ADD_EXECUTABLE(hello ${SRC_LIST})
